@@ -22,6 +22,7 @@
 #define ZIPROOTFACTORY_H
 
 #include "zipdirfs/NameSearchTree.h"
+#include "zipdirfs/ZipWalker.h"
 #include "zipdirfs/ZipFile.h"
 #include <fusekit/entry.h>
 #include <fusekit/no_lock.h>
@@ -99,6 +100,54 @@ namespace zipdirfs
 		}
 		void checkFile()
 		{
+			struct ::stat pathinfo;
+			int res = ::stat (zipFile->getFilePath().c_str(), &pathinfo);
+
+			if ( (res != 0) )
+			{
+				::perror ("ZipRootFactory::checkFile: stat");
+				std::cerr << "Real path " << zipFile->getFilePath() << std::endl;
+				return;
+			}
+
+			if (this->lastUpdate < pathinfo.st_mtime)
+			{
+				this->updateEntries();
+				this->lastUpdate = pathinfo.st_mtime;
+			}
+		}
+		void updateEntries()
+		{
+			lock guard (*this);
+			entries.clear();
+			ZipWalker it (this->zipFile, "", false);
+			ZipWalker end (this->zipFile, "", true);
+
+			for (; it != end; it++)
+			{
+				fusekit::entry* entry = it->second;
+				entries.add (it->first.c_str(), entry);
+			}
+
+			std::string name;
+			while (entries.size() == 1)
+			{
+				name.append(*entries.begin() );
+				struct ::stat bypassStat;
+				entries.get (name.c_str() )->stat (bypassStat);
+
+				if (!S_ISDIR (bypassStat.st_mode) ) break;
+				name.append("/");
+				it = ZipWalker (this->zipFile, name.c_str(), false);
+				end = ZipWalker (this->zipFile, name.c_str(), true);
+				entries.clear();
+
+				for (; it != end; it++)
+				{
+					fusekit::entry* entry = it->second;
+					entries.add (it->first.c_str(), entry);
+				}
+			}
 		}
 	};
 }
